# Jekwwer

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .mlc-config.json  .pre-commit-config.yaml  .prettierrc  .yamllint.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  STYLEGUIDE.md  config.json  cspell.json  generate_profile_card.py  index.html  package-lock.json  package.json  pyproject.toml  tox.ini  update_contributions.py
.devcontainer/: .dockerignore  Dockerfile  devcontainer-lock.json  devcontainer.json  post-create.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  CODE_ENHANCEMENT_REQUEST.md  COMMUNITY_GUIDELINES_VIOLATION_REPORT.md  DEPENDENCY_UPDATE_REQUEST.md  DOCUMENTATION_FEEDBACK.md  ENVIRONMENT_SETUP_ISSUE.md  FEATURE_REQUEST.md  OTHER_ISSUE.md  PERFORMANCE_IMPROVEMENT_PROPOSAL.md  QUESTIONS_OR_HELP.md  REFACTORING_SUGGESTION.md  SECURITY_ISSUE_REPORT.md  TEST_CASE_PROPOSAL.md  USER_STORY.md  config.yml
.github/PULL_REQUEST_TEMPLATE/: BUGFIX.md  DOCS.md  FEATURE.md
.github/workflows/: deploy.yml  update.yml
assets/: profile-card.glass.index.template.html  profile-card.man-page.index.template.html
docs/: index.html
docs/glass/: index.html
docs/man/: index.html
profile_card/: __init__.py  config.py  fetchers.py
profile_card/cards/: __init__.py  _shared.py  glass.py  man.py
