[tool.poetry]
name = "jekwwer-jekwwer"
version = "0.0.0"
description = "Dynamic GitHub profile page showing daily-updated contribution stats and heatmap."
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
requests = "^2.33.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.6.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.15.12"

[tool.poetry.group.mypy.dependencies]
mypy = "^1.20.2"
types-requests = "^2.33.0.20260408"

[tool.mypy]
platform = "linux"
python_version = "3.12"
strict = true

[tool.ruff]
line-length = 88
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "W", "C", "ANN", "B", "D", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"
